<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_toStartOf="@+id/calc"
        android:layout_toLeftOf="@+id/calc"
        android:inputType="numberDecimal"
        android:hint="@string/bill_amount"
        android:ems="10" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="calc"
        android:text="@string/calculate" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_10" />

    <TextView
        android:id="@+id/fifteen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_15" />

    <TextView
        android:id="@+id/twenty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_20" />

    <TextView
        android:id="@+id/twentyfive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_25" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#555"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp" />

</LinearLayout>